Fixed right padding on some browser for overflowing content tabs

--- a/src/assets/stylesheets/main/extensions/pymdownx/_tabbed.scss
+++ b/src/assets/stylesheets/main/extensions/pymdownx/_tabbed.scss
@@ -217,8 +217,29 @@
     > .tabbed-alternate .tabbed-labels {
       max-width: 100vw;
       margin: 0 px2rem(-16px);
-      padding: 0 px2rem(16px);
-      scroll-padding: 0 px2rem(16px);
+      padding-left: px2rem(16px);
+      scroll-padding-left: px2rem(16px);
+
+      // Adjust for right-to-left languages
+      [dir="rtl"] & {
+        padding-right: px2rem(16px);
+        padding-left: initial;
+        scroll-padding-right: px2rem(16px);
+        scroll-padding-left: initial;
+      }
+
+      // Hack: some browsers ignore the right padding on flex containers,
+      // see https://bit.ly/3lsPS3S
+      &::after {
+        padding-right: px2rem(16px);
+        content: "";
+
+        // Adjust for right-to-left languages
+        [dir="rtl"] & {
+          padding-right: initial;
+          padding-left: px2rem(16px);
+        }
+      }
     }
   }
 
